repost separate apis and post views
